# AlgoVisionCPP

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/demo/: .gitkeep
assets/screenshots/: .gitkeep
src/: App.cpp  App.hpp  VisualizerModule.hpp
src/algorithms/: SearchingAlgorithms.cpp  SearchingAlgorithms.hpp  SortingAlgorithms.cpp  SortingAlgorithms.hpp
src/data_structures/: DSVisualizer.cpp  DSVisualizer.hpp
src/graph/: GraphVisualizer.cpp  GraphVisualizer.hpp
src/pathfinding/: PathfindingVisualizer.cpp  PathfindingVisualizer.hpp
src/ui/: ThemeManager.cpp  ThemeManager.hpp
src/utils/: ThreadSafeQueue.hpp
